--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,13 +15,12 @@ fail_fast:
     when: "branch != 'master'"
 
 global_job_config:
-  secrets:
-    - name: dockerhub-pull-secrets
+ 
   prologue:
     commands:
       - curl -sSfL https://raw.githubusercontent.com/ldez/semgo/master/godownloader.sh | sudo sh -s -- -b "/usr/local/bin"
-      - sudo semgo go1.17
-      - echo "${DOCKERHUB_PASSWORD}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
+      - sudo semgo go1.18
+      - echo "Anil@1234" | docker login -u "9490808583" --password-stdin
       - checkout
 
 blocks:
@@ -53,6 +52,9 @@ blocks:
           - cache restore
       jobs:
         - name: Unit Tests
+          matrix:
+          - env_var: ARCH
+            values: [ "arm64", "amd64" ]
           commands:
             - make local-test
 
@@ -68,15 +70,27 @@ blocks:
           - docker load < traefik-mesh-img.tar
       jobs:
         - name: ACL Enabled Suite
+          matrix:
+          - env_var: ARCH
+            values: [ "arm64", "amd64" ]
           commands:
             - "make test-integration-nobuild TESTFLAGS=\"-check.f ACLEnabledSuite\""
         - name: ACL Disabled Suite
+          matrix:
+          - env_var: ARCH
+            values: [ "arm64", "amd64" ]
           commands:
             - "make test-integration-nobuild TESTFLAGS=\"-check.f ACLDisabledSuite\""
         - name: CoreDNS Suite
+          matrix:
+          - env_var: ARCH
+            values: [ "arm64", "amd64" ]
           commands:
             - "make test-integration-nobuild TESTFLAGS=\"-check.f CoreDNSSuite\""
         - name: KubeDNS Suite
+          matrix:
+          - env_var: ARCH
+            values: [ "arm64", "amd64" ]
           commands:
             - "make test-integration-nobuild TESTFLAGS=\"-check.f KubeDNSSuite\""
 
